fix experience section alignment

--- a/src/Experiences/Experiences.css
+++ b/src/Experiences/Experiences.css
@@ -6,7 +6,7 @@
     background-color: #222;
 }
 .timeline-dots {
-    margin-left: -12px;
+    margin-left: -5px;
     width: 9px;
     height: 9px;
 }
